--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/circle_button"
-                android:backgroundTint="#F4511E"
+                android:backgroundTint="#FF67DE"
                 android:onClick="clearBTN"
                 android:text="@string/clear"
                 android:textColor="@color/white"
@@ -361,7 +361,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/circle_button"
-                android:backgroundTint="#039BE5"
+                android:backgroundTint="#E50303"
                 android:onClick="equalsBTN"
                 android:text="@string/equals"
                 android:gravity="center"
